--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -8,5 +8,5 @@
   </div>
 {% endblock %}
 {% block scripts%}
-  <script src="{% static 'js/index.js' %}" type="module"></script>
+  <script src="{% static 'js/default.js' %}" type="module"></script>
 {% endblock %}
