--- a/assets/scss/_series-grid.scss
+++ b/assets/scss/_series-grid.scss
@@ -1,5 +1,5 @@
 .image-grid {
-  .image-grid--list {
+  .image-grid__list {
     align-content: center;
     display: flex;
     flex-flow: row wrap;
@@ -11,7 +11,7 @@
     width: 100%;
   }
 
-  .image-grid--list-item {
+  .image-grid__list-item {
     aspect-ratio: 1 / 1;
     border: 1px solid black;
     box-sizing: border-box;
@@ -26,7 +26,7 @@
     width: 25%;
   }
 
-  .image-grid--link {
+  .image-grid__link {
     align-content: center;
     align-content: center;
     background: #161616;
@@ -41,8 +41,7 @@
     width: 100%;
     z-index: 100;
 
-
-    .image-grid--title {
+    .image-grid__title {
       align-self: center;
       background: rgba(0, 0, 0, 0.55);
       box-sizing: border-box;
@@ -68,13 +67,13 @@
 
     &:hover,
     &:focus {
-      .image-grid--title {
+      .image-grid__title {
         display: block;
       }
     }
   }
 
-  .image-grid--image {
+  .image-grid__image {
     position: absolute;
     min-height: 100%;
     min-width: 100%;
@@ -84,7 +83,7 @@
 }
 
 @media screen and (max-width: 650px) {
-  .image-grid--list-item {
+  .image-grid__list-item {
     width: 50%;
   }
 }
