--- a/assets/scss/_slideshow.scss
+++ b/assets/scss/_slideshow.scss
@@ -1,156 +1,166 @@
+@use 'sass:map';
+
 .slideshow {
-  align-items: center;
-  display: flex;
-  height: 75vh;
-  justify-content: center;
-  margin: 0 auto;
-  max-width: 90rem;
-  min-height: 40rem;
-  overflow: hidden;
+  max-width: 100%;
   position: relative;
   width: 100%;
 
   .featured-images {
     align-items: center;
     display: flex;
-    height: 100%;
+    height: 75vh;
     list-style: none;
     margin: 0 auto;
-    max-width: 90rem;
+    max-width: 100%;
+    min-height: 50rem;
+    overflow: hidden;
     padding: 0;
     position: relative;
     width: 100%;
   }
 
   .featured-image {
+    max-width: 100%;
+    width: 100%;
     height: 100%;
     list-style: none;
     margin: 0;
-    max-width: 100%;
     opacity: 0;
     padding: 0;
     position: absolute;
     text-align: center;
     top: 0;
+    width: 0;
+    will-change: transition;
     transition: opacity 1s ease-in-out;
-    width: 100%;
-    will-change: transform;
-
-    &.active {
-      opacity: 1;
-      transition: opacity 1s ease-in-out;
-      visibility: visible;
-    }
+    z-index: 0;
 
     img {
       max-width: 100%;
       position: absolute;
       width: 100%;
     }
+
+    .image-title {
+      background: rgba(0, 0, 0, 0.65);
+      box-shadow: 0px 0.6rem 1.25rem 0.6rem rgba(0, 0, 0, 0.65);
+      box-sizing: border-box;
+      color: #fff;
+      display: none;
+      font-family: map.get($fonts, 'sans', 'font-family');
+      font-size: 2rem;
+      font-size: 2rem;
+      font-weight: 250;
+      left: 0;
+      padding: 3rem 0 1.5rem 0;
+      position: absolute;
+      top: 0;
+      visibility: hidden;
+      width: 100%;
+      z-index: 5;
+    }
+
+    &.active {
+      opacity: 1;
+      z-index: 1;
+
+      .image-title {
+        display: block;
+        visibility: visible;
+      }
+    }
   }
 
-  .slideshow-play-overlay {
+  .slideshow-info {
     align-items: center;
     background: transparent;
     display: flex;
     height: 100%;
-    justify-content: center;
-    margin: 0 10rem;
-    opacity: 0;
-    position: absolute;
+    justify-content: space-evenly;
+    margin: 0.5rem auto;
+    opacity: 1;
+    position: relative;
     transition: background 0.5s ease-in-out;
-    width: calc(100% - 20rem);
+    width: 90%;
     z-index: 10;
-
-    &:hover {
-      background: linear-gradient(
-        90deg,
-        rgba(0, 0, 0, 0) 0%,
-        rgba(0, 0, 0, 0.5) 50%,
-        rgba(0, 0, 0, 0) 100%
-      );
-      opacity: 1;
-      transition: background 0.5s ease-in-out;
-    }
   }
 
-  .slideshow-nav {
-    align-items: center;
-    background: rgba(0, 0, 0, 0.35);
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    opacity: 0;
-    position: absolute;
+  &.prev {
+    border-right: 1px solid rgba(0, 0, 0, 0.5);
+    margin-right: auto;
+    width: min-content;
+  }
+
+  &.next {
+    border-left: 1px solid rgba(0, 0, 0, 0.5);
+    margin-left: auto;
+    right: 0;
+    width: auto;
+  }
+
+  &:hover {
+    opacity: 1;
     transition: opacity 0.5s ease-in-out;
-    width: 8rem;
-    z-index: 200;
-
-    &.prev {
-      border-right: 1px solid rgba(0, 0, 0, 0.5);
-      left: 0;
-    }
-
-    &.next {
-      border-left: 1px solid rgba(0, 0, 0, 0.5);
-      left: auto;
-      right: 0;
-    }
-
-    &:hover {
-      opacity: 1;
-      transition: opacity 0.5s ease-in-out;
-    }
-
-    button {
-      background: transparent;
-      border: 0;
-      cursor: pointer;
-      height: 100%;
-      position: relative;
-      width: 100%;
-    }
   }
 
   button {
     background: transparent;
     border: 0;
     cursor: pointer;
+    height: 100%;
+    position: relative;
+    width: auto;
+  }
+}
 
-    &.hidden {
-      display: none;
-    }
+button {
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  height: 5rem;
+  width: 5rem;
 
-    svg {
-      pointer-events: none;
-    }
+  &.hidden {
+    display: none;
+  }
 
+  svg {
+    aspect-ratio: 1/1;
+    pointer-events: none;
+    width: 8vw;
+  }
+
+  path {
+    fill: rgb(170, 170, 170, 0.75);
+    stroke: rgb(51, 51, 51, 0.75);
+    stroke-width: 0.5px;
+    stroke-linejoin: round;
+    stroke-linejoin: miter;
+  }
+
+  &:hover {
     path {
-      fill: rgb(170, 170, 170, 0.75);
-      stroke: rgb(51, 51, 51, 0.75);
-      stroke-width: 0.5px;
-      stroke-linejoin: round;
-      stroke-linejoin: miter;
-    }
-
-    &:hover {
-      path {
-        fill: rgb(238, 238, 238, 0.65);
-        stroke: rgb(17, 17, 17, 0.75);
-      }
+      fill: rgb(238, 238, 238, 0.65);
+      stroke: rgb(17, 17, 17, 0.75);
     }
   }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (width <= 48rem) {
   .slideshow {
     margin-bottom: 2rem;
+    margin-top: 0;
     min-height: auto;
 
-    .featured-image {
-      img {
-        height: 100%;
-        margin: -25% auto;
+    .featured-images {
+      height: 30vh;
+      min-height: 30rem;
+    }
+
+    .play-pause {
+      svg {
+        aspect-ratio: 1/1;
+        width: 10vw;
       }
     }
   }
