--- a/gallery/static/scss/_base.scss
+++ b/gallery/static/scss/_base.scss
@@ -1,3 +1,7 @@
+@use 'sass:map';
+
+@import './vars';
+
 html,
 body {
   background: #000;
@@ -11,33 +15,48 @@ html {
 
 body {
   color: #eee;
-  font-family: "Raleway", sans-serif;
+  font-family: map.get($fonts, 'sans', 'font-family');
   padding: 9rem 0 0 0;
 }
 
-header,
-main,
-footer {
-  opacity: 0;
-}
-
-.ready {
-  header,
-  main,
-  footer {
-    opacity: 1;
-    transition: opacity 1.5s ease;
-  }
+main {
+  align-items: center;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: flex-start;
+  position: relative;
+  top: 3rem;
+  width: 100%;
 }
 
 h1,
 h2,
 h3,
 h4 {
-  font-family: "Cormorant Unicase", serif;
+  font-family: map.get($fonts, 'serif', 'font-family');
+  font-weight: 400;
+  letter-spacing: 0.15rem;
+  margin: 1.5rem auto;
   text-align: center;
-  margin: 0.5rem auto;
-  letter-spacing: 0.1rem;
+}
+
+.featured-series h2 {
+  margin: 3rem auto 2rem auto;
+}
+
+a {
+  color: $link;
+  text-decoration: none;
+}
+
+a:hover,
+a:focus {
+  color: $link-hover;
+  text-decoration: underline;
+}
+
+a:active {
+  color: $link-active;
 }
 
 p {
@@ -47,14 +66,15 @@ p {
 
 header {
   background: #000;
+  box-shadow: 0px 0.6rem 1.25rem 0.6rem rgba(0, 0, 0, 1);
+  left: 0;
   position: fixed;
   top: 0;
-  left: 0;
   width: 100%;
-  z-index: 200000;
+  z-index: 200;
 }
 
-header > h1 {
+header h1 {
   font-size: 3rem;
 }
 
@@ -67,17 +87,62 @@ nav {
   width: 100%;
 }
 
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
+footer {
+  display: block;
+  margin-top: 5rem;
+  width: 100%;
 }
 
-main {
-  top: 10rem;
+.sr-only {
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+.full-image__image-container {
+  margin: 0 auto;
+  text-align: center;
+}
+
+footer {
+  text-align: center;
+
+  p {
+    font-size: 1.25rem;
+    font-weight: 300;
+    margin-bottom: 1rem;
+  }
+
+  ul {
+    display: flex;
+    gap: 1.5rem;
+    justify-content: center;
+    list-style: none;
+    margin: 0 auto 2rem auto;
+    padding: 0;
+    text-align: center;
+  }
+
+  li {
+    display: inline-block;
+    font-size: 1.5rem;
+    margin: 0 0.5rem;
+  }
+}
+
+@media screen and (width <= 48rem) {
+  main {
+    top: -4.4rem;
+    z-index: 10;
+  }
+  header > h1 {
+    font-size: 1.5rem;
+    font-size: 5vw;
+    margin-top: 0.5rem;
+  }
 }
