--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,6 +5,8 @@
 @import './navigation-toggle';
 @import './slideshow';
 @import './image-grid';
+@import './featured_series';
 @import './focal_points';
 @import './full-image';
 @import './modal';
+@import './zoom';
