--- a/assets/scss/_image-grid.scss
+++ b/assets/scss/_image-grid.scss
@@ -88,8 +88,8 @@
   .image-grid {
     .image-grid__list-item {
       height: 50%;
-      max-height: 250px;
-      max-width: 250px;
+      max-height: 24rem;
+      max-width: 24rem;
       width: 50%;
     }
 
