--- a/assets/scss/_modal.scss
+++ b/assets/scss/_modal.scss
@@ -33,14 +33,16 @@
   }
 
   &__content {
-    align-items: center;
-    background: #000;
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    position: relative;
-    width: auto;
-    z-index: 2;
+    align-items: flex-start;
+  background: #000;
+  box-sizing: border-box;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  padding-top: 4rem;
+  position: relative;
+  width: auto;
+  z-index: 2;
   }
 
   &__content--image-details {
