--- a/assets/scss/_slideshow.scss
+++ b/assets/scss/_slideshow.scss
@@ -20,20 +20,19 @@
   }
 
   .featured-image {
-    max-width: 100%;
-    width: 100%;
     height: 100%;
     list-style: none;
     margin: 0;
+    max-width: 100%;
     opacity: 0;
     padding: 0;
+    pointer-events: none;
     position: absolute;
     text-align: center;
     top: 0;
-    width: 0;
-    will-change: transition;
     transition: opacity 1s ease-in-out;
-    z-index: 0;
+    width: 100%;
+    will-change: transition;
 
     img {
       max-width: 100%;
@@ -49,9 +48,9 @@
       display: none;
       font-family: map.get($fonts, 'sans', 'font-family');
       font-size: 2rem;
-      font-size: 2rem;
       font-weight: 250;
       left: 0;
+      min-height: 10%;
       padding: 3rem 0 1.5rem 0;
       position: absolute;
       top: 0;
@@ -62,7 +61,8 @@
 
     &.active {
       opacity: 1;
-      z-index: 1;
+      pointer-events: fill;
+      transition: opacity 1s ease-in-out;
 
       .image-title {
         display: block;
@@ -148,7 +148,6 @@ button {
 
 @media screen and (width <= 48rem) {
   .slideshow {
-    margin-bottom: 2rem;
     margin-top: 0;
     min-height: auto;
 
