--- a/gallery/static/css/style.css
+++ b/gallery/static/css/style.css
@@ -21,6 +21,8 @@ main {
   display: flex;
   flex-flow: column wrap;
   justify-content: flex-start;
+  margin: auto;
+  max-width: 100rem;
   position: relative;
   top: 3rem;
   width: 100%;
@@ -113,6 +115,17 @@ footer p {
   font-size: 1.25rem;
   font-weight: 300;
   margin-bottom: 1rem;
+}
+footer p svg {
+  max-width: 2rem;
+  max-height: 2rem;
+}
+footer p a svg {
+  fill: #aaa;
+}
+footer p a:hover svg {
+  fill: #eee;
+  text-decoration: none;
 }
 footer ul {
   display: flex;
@@ -496,7 +509,6 @@ button:hover path {
 
 @media screen and (width <= 48rem) {
   .slideshow {
-    margin-bottom: 2rem;
     margin-top: 0;
     min-height: auto;
   }
@@ -590,8 +602,8 @@ button:hover path {
 @media screen and (width <= 48rem) {
   .image-grid .image-grid__list-item {
     height: 50%;
-    max-height: 250px;
-    max-width: 250px;
+    max-height: 24rem;
+    max-width: 24rem;
     width: 50%;
   }
   .image-grid .image-grid__link .image-grid__title {
@@ -601,6 +613,12 @@ button:hover path {
     background: rgba(0, 0, 0, 0);
   }
 }
+.featured-series {
+  justify-content: center;
+  margin: 0 auto 3rem auto;
+  width: 100%;
+}
+
 .top {
   top: 0;
   bottom: auto;
@@ -749,11 +767,13 @@ button:hover path {
   z-index: 1;
 }
 .modal__content {
-  align-items: center;
+  align-items: flex-start;
   background: #000;
+  box-sizing: border-box;
   display: flex;
   height: 100%;
   justify-content: center;
+  padding-top: 4rem;
   position: relative;
   width: auto;
   z-index: 2;
@@ -829,6 +849,31 @@ button:hover path {
     font-size: 1.5rem;
     margin-top: 1rem;
   }
+}
+.zoom {
+  cursor: zoom-in;
+  position: relative;
+}
+.zoom__large-image {
+  aspect-ratio: 1/1;
+  border: 4px solid #555;
+  border-radius: 100%;
+  box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.3);
+  display: block;
+  height: auto;
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  transition: opacity 0.2s;
+  width: 16rem;
+  z-index: 99;
+}
+.zoom.active {
+  cursor: crosshair;
+}
+.zoom.active .zoom__large-image {
+  cursor: crosshair;
+  opacity: 1;
 }
 
 /*# sourceMappingURL=style.css.map */
