--- a/gallery/templates/base.html
+++ b/gallery/templates/base.html
@@ -50,7 +50,63 @@
     <main>{% block main_content %}{% endblock %}</main>
 
     <footer role="footer">
-      <p>&copy; <a href="mailto:contact@bellvance.com">Tina Bell Vance</a></p>
+      <p>&copy; Tina Bell Vance</p>
+      <p>
+        <a
+          href="https://www.instagram.com/tinabellvance/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <span class="sr-only">Instagram</span>
+          <svg
+            width="128"
+            height="128"
+            viewBox="0 0 1792 1792"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="#eeeeee"
+          >
+            <path
+              d="M1152 896q0-106-75-181t-181-75-181 75-75 181 75 181 181 75 181-75 75-181zm138 0q0 164-115 279t-279 115-279-115-115-279 115-279 279-115 279 115 115 279zm108-410q0 38-27 65t-65 27-65-27-27-65 27-65 65-27 65 27 27 65zm-502-220q-7 0-76.5-.5t-105.5 0-96.5 3-103 10-71.5 18.5q-50 20-88 58t-58 88q-11 29-18.5 71.5t-10 103-3 96.5 0 105.5.5 76.5-.5 76.5 0 105.5 3 96.5 10 103 18.5 71.5q20 50 58 88t88 58q29 11 71.5 18.5t103 10 96.5 3 105.5 0 76.5-.5 76.5.5 105.5 0 96.5-3 103-10 71.5-18.5q50-20 88-58t58-88q11-29 18.5-71.5t10-103 3-96.5 0-105.5-.5-76.5.5-76.5 0-105.5-3-96.5-10-103-18.5-71.5q-20-50-58-88t-88-58q-29-11-71.5-18.5t-103-10-96.5-3-105.5 0-76.5.5zm768 630q0 229-5 317-10 208-124 322t-322 124q-88 5-317 5t-317-5q-208-10-322-124t-124-322q-5-88-5-317t5-317q10-208 124-322t322-124q88-5 317-5t317 5q208 10 322 124t124 322q5 88 5 317z"
+            />
+          </svg>
+        </a>
+        <a
+          href="https://www.flickr.com/photos/tina"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <span class="sr-only">Flickr</span>
+          <svg
+            width="128"
+            height="128"
+            viewBox="0 0 1792 1792"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="#eeeeee"
+          >
+            <path
+              d="M1376 128q119 0 203.5 84.5t84.5 203.5v960q0 119-84.5 203.5t-203.5 84.5h-960q-119 0-203.5-84.5t-84.5-203.5v-960q0-119 84.5-203.5t203.5-84.5h960zm-550 768q0-88-62-150t-150-62-150 62-62 150 62 150 150 62 150-62 62-150zm564 0q0-88-62-150t-150-62-150 62-62 150 62 150 150 62 150-62 62-150z"
+            />
+          </svg>
+        </a>
+        <a href="mailto:tina@bellvance.com">
+          <span class="sr-only">email</span>
+          <svg
+            version="1.1"
+            width="128"
+            height="128"
+            viewBox="0 0 16 16"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            fill="#ffffff"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M1.75 2A1.75 1.75 0 000 3.75v.736a.75.75 0 000 .027v7.737C0 13.216.784 14 1.75 14h12.5A1.75 1.75 0 0016 12.25v-8.5A1.75 1.75 0 0014.25 2H1.75zM14.5 4.07v-.32a.25.25 0 00-.25-.25H1.75a.25.25 0 00-.25.25v.32L8 7.88l6.5-3.81zm-13 1.74v6.441c0 .138.112.25.25.25h12.5a.25.25 0 00.25-.25V5.809L8.38 9.397a.75.75 0 01-.76 0L1.5 5.809z"
+            />
+          </svg>
+        </a>
+      </p>
     </footer>
 
     {% block modals %} {% endblock %} {% block scripts %}
