--- a/gallery/templates/base.html
+++ b/gallery/templates/base.html
@@ -50,7 +50,7 @@
     <main>{% block main_content %}{% endblock %}</main>
 
     <footer role="footer">
-      <p>&copy; Tina Bell Vance</p>
+      <p>&copy; {% now "Y" %} Tina Bell Vance</p>
       <p>
         <a
           href="https://www.instagram.com/tinabellvance/"
