--- a/gallery/templates/partials/_navigation.html
+++ b/gallery/templates/partials/_navigation.html
@@ -57,7 +57,7 @@
       <a class="navigation-link" title="Artwork" href="/artwork">Artwork</a>
     </li>
     <li class="navigation-list-item">
-      <a class="navigation-link" title="About" href="/about">About</a>
+      <a class="navigation-link" title="About" href="/page/about">About</a>
     </li>
   </ul>
 </nav>
