--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,12 @@ p {
   margin: 0.5rem 1rem;
 }
 
+.page p {
+  font-size: 1.25rem;
+  font-weight: 300;
+  max-width: 60rem;
+}
+
 header {
   background: #000;
   box-shadow: 0px 0.6rem 1.25rem 0.6rem rgb(0, 0, 0);
@@ -117,8 +123,8 @@ footer p {
   margin-bottom: 1rem;
 }
 footer p svg {
-  max-width: 2rem;
-  max-height: 2rem;
+  max-width: 3rem;
+  max-height: 3rem;
 }
 footer p a svg {
   fill: #aaa;
