--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -66,6 +66,14 @@ p {
   margin: 0.5rem 1rem;
 }
 
+.page {
+  p {
+    font-size: 1.25rem;
+    font-weight: 300;
+    max-width: 60rem;
+  }
+}
+
 header {
   background: #000;
   box-shadow: 0px 0.6rem 1.25rem 0.6rem rgba(0, 0, 0, 1);
