--- a/gallery/static/css/style.css
+++ b/gallery/static/css/style.css
@@ -63,6 +63,13 @@ p {
   margin: 0.5rem 1rem;
 }
 
+.page p {
+  font-size: 1.25rem;
+  font-weight: 300;
+  line-height: 1.5;
+  max-width: 60rem;
+}
+
 header {
   background: #000;
   box-shadow: 0px 0.6rem 1.25rem 0.6rem rgb(0, 0, 0);
@@ -89,6 +96,7 @@ nav {
 footer {
   display: block;
   margin-top: 5rem;
+  text-align: center;
   width: 100%;
 }
 
@@ -109,19 +117,27 @@ footer {
 }
 
 footer {
-  text-align: center;
+  align-items: center;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
 }
 footer p {
+  display: flex;
   font-size: 1.25rem;
   font-weight: 300;
+  gap: 1rem;
   margin-bottom: 1rem;
 }
 footer p svg {
-  max-width: 2rem;
-  max-height: 2rem;
+  max-height: 3rem;
+  max-width: 3rem;
 }
 footer p a svg {
   fill: #aaa;
+}
+footer p a:hover {
+  text-decoration: none;
 }
 footer p a:hover svg {
   fill: #eee;
