--- a/gallery/static/scss/_base.scss
+++ b/gallery/static/scss/_base.scss
@@ -66,6 +66,15 @@ p {
   margin: 0.5rem 1rem;
 }
 
+.page {
+  p {
+    font-size: 1.25rem;
+    font-weight: 300;
+    line-height: 1.5;
+    max-width: 60rem;
+  }
+}
+
 header {
   background: #000;
   box-shadow: 0px 0.6rem 1.25rem 0.6rem rgba(0, 0, 0, 1);
@@ -92,6 +101,7 @@ nav {
 footer {
   display: block;
   margin-top: 5rem;
+  text-align: center;
   width: 100%;
 }
 
@@ -112,25 +122,35 @@ footer {
 }
 
 footer {
-  text-align: center;
+  align-items: center;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
 
   p {
+    display: flex;
     font-size: 1.25rem;
     font-weight: 300;
+    gap: 1rem;
     margin-bottom: 1rem;
 
     svg {
-      max-width: 3rem;
       max-height: 3rem;
+      max-width: 3rem;
     }
 
-    a svg {
-      fill: $link;
+    a {
+      svg {
+        fill: $link;
+      }
     }
 
-    a:hover svg {
-      fill: $link-hover;
+    a:hover {
       text-decoration: none;
+      svg {
+        fill: $link-hover;
+        text-decoration: none;
+      }
     }
   }
 
