--- a/assets/scss/_zoom.scss
+++ b/assets/scss/_zoom.scss
@@ -4,16 +4,18 @@
 
   &__large-image {
     aspect-ratio: 1/1;
-    border: 4px solid $nav-border;
+    border: 1px solid $nav-border;
     border-radius: 100%;
     box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.3);
     display: block;
     height: auto;
+    left: 0;
     opacity: 0;
     pointer-events: none;
     position: absolute;
-    transition: opacity 0.2s;
-    width: 16rem;
+    top: 0;
+    transition: opacity 0.2s ease;
+    width: 30%;
     z-index: 99;
   }
 
