--- a/assets/scss/_modal.scss
+++ b/assets/scss/_modal.scss
@@ -25,7 +25,7 @@
 
   &__bg {
     backdrop-filter: blur(2.5px);
-    background: rgba(0, 0, 0, 0.25);
+    background: rgba(0, 0, 0, 0.5);
     height: 100%;
     position: absolute;
     width: 100%;
@@ -34,15 +34,15 @@
 
   &__content {
     align-items: flex-start;
-  background: #000;
-  box-sizing: border-box;
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  padding-top: 4rem;
-  position: relative;
-  width: auto;
-  z-index: 2;
+    background: #000;
+    box-sizing: border-box;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    padding: 4rem 1rem 1rem 1rem;
+    position: relative;
+    width: auto;
+    z-index: 2;
   }
 
   &__content--image-details {
@@ -66,6 +66,7 @@
   }
 
   &__image {
+    border: 1px solid $nav-border;
     height: 100%;
     max-height: 85vh;
     max-width: 85vw;
