--- a/gallery/templates/base.html
+++ b/gallery/templates/base.html
@@ -15,8 +15,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-
+    <link rel="stylesheet" href="{% static "css/style.css" %}" />
+    <link rel="icon" href="{% static "images/favicon-dark.svg" %}" type="image/x-icon">
     <title>
       Tina Bell Vance | {% block page_name %}Digital Artist{% endblock %}
     </title>
