--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,6 +160,7 @@ footer li {
 
 @media screen and (width <= 48rem) {
   main {
+    margin-bottom: -2rem;
     top: -4.4rem;
     z-index: 10;
   }
@@ -780,6 +781,7 @@ button:hover path {
     align-items: center;
     display: flex;
     justify-content: center;
+    margin-bottom: 0;
     max-height: 75vh;
     max-width: auto;
     width: 100%;
@@ -853,7 +855,8 @@ button:hover path {
 }
 .modal__image {
   border: 1px solid #555;
-  height: 100%;
+  height: auto;
+  width: 100%;
   max-height: 85vh;
   max-width: 85vw;
 }
