--- a/assets/scss/_modal.scss
+++ b/assets/scss/_modal.scss
@@ -67,7 +67,8 @@
 
   &__image {
     border: 1px solid $nav-border;
-    height: 100%;
+    height: auto;
+    width: 100%;
     max-height: 85vh;
     max-width: 85vw;
   }
