--- a/gallery/static/scss/_full-image.scss
+++ b/gallery/static/scss/_full-image.scss
@@ -43,6 +43,7 @@
     align-items: center;
     display: flex;
     justify-content: center;
+    margin-bottom: 0;
     max-height: 75vh;
     max-width: auto;
     width: 100%;
